fix event_store. show price.

--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -28,12 +28,12 @@
     <td><%= raw(@event.description) %></td>
   </tr>
   <tr>
-    <th>City</th>
-    <td><%= @event.city %></td>
+    <th>Price</th>
+    <td><%= @event.price %></td>
   </tr>
   <tr>
-    <th>Address</th>
-    <td><%= @event.address %></td>
+    <th>Store</th>
+    <td><%= @event.store_name %>, <%= @event.store_address %></td>
   </tr>
   <tr>
     <th>Contact</th>
