--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -25,8 +25,8 @@
     </div>
 
     <div class="form-group">
-      <%= n.label :store, "store" %>
-      <%= n.select :store, Store.all.map{ |x| [x.name, x.id] }, {}, :class => "form-control", :id => "store-select", :required => "required" %> 
+      <%= n.label :store_id, "store" %>
+      <%= n.select :store_id, Store.all.map{ |x| [x.name, x.id] }, {}, :class => "form-control", :id => "store-select", :required => "required" %> 
     </div>
 
     <div class="row">
