--- a/app/views/vips/index.html.erb
+++ b/app/views/vips/index.html.erb
@@ -1,7 +1,18 @@
 
+
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    
+  <div class="col-md-4 col-md-offset-4 text-center"> 
+    <% if current_user.orders.exists? && current_user.orders.joins(:trades).where('trades.paid = true') %>
+      <div class="empty100px"></div>
+      <%= image_tag @qrcode %>
+      <div class="empty100px"></div>
+    <% end %>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-4 col-md-offset-4">
+
     <h1>Vip order</h1>
 
     <div id="order">
