--- a/app/assets/stylesheets/stores.scss
+++ b/app/assets/stylesheets/stores.scss
@@ -20,34 +20,44 @@
     padding: 0;
     width: 200px;
   }
+  
+  #board {
+    background: rgba(0,0,0,0.8);
+    position: fixed;
+    top: 0;
+    z-index: 900;
+    width: 100%;
+    height: 100%;
+    display: none;
+  }
 
   #black-board {
     position: fixed;
     top: 0;
     z-index: 1000;
-    width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.8);
     display: none;
-    .container {
-    padding-top: 3%; 
-    padding-bottom: 3%;
-    height: 100%;
-      .content {
-        padding: 3%;
-        height: 100%;
-        background: #111;
-        overflow-y: scroll; 
-        overflow-x: hidden;
-        .store-img {
-          text-align: center;
-          img {
-            width: 90%;
-          }
+    .content {
+      position: fixed;
+      z-index: 1100;
+      padding: 3%;
+      height: 100%;
+      background: #111;
+      overflow-y: scroll; 
+      overflow-x: hidden;
+      .store-img {
+        text-align: center;
+        img {
+          width: 90%;
         }
       }
     }
+    
     .close-board {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      z-index: 1200;
       color: #fff;
       font-size: 2em
     }
