Add container to dj page.

--- a/app/views/djs/index.html.erb
+++ b/app/views/djs/index.html.erb
@@ -1,4 +1,5 @@
 
+<div class="container">
 <div id="masonry-container" class="transitions-enabled clearfix">
   <% @dj.each do |x| %>
     <div class="box dj-image-box">
@@ -13,6 +14,7 @@
     </div>
   <% end %>
 </div>
+</div>  
 
 <script>
 $(document).ready(function(e){
