--- a/app/views/vips/index.html.erb
+++ b/app/views/vips/index.html.erb
@@ -40,7 +40,7 @@
 
         <div class="form-group">
           <%= n.label :payment_method, "Payment method" %>
-          <%= n.select :payment_method, ["Credit","ATM"], :class => "form-control", :id => "price" %>
+          <%= n.select :payment_method, ["Credit"], :class => "form-control", :id => "price" %>
         </div>
 
         <%= n.submit "確認", :class => "btn btn-primary" %>
@@ -50,6 +50,8 @@
 
   </div>
 </div>
+
+<div class="empty200px"></div>
 
 
 
