update some view.

--- a/app/assets/stylesheets/stores.scss
+++ b/app/assets/stylesheets/stores.scss
@@ -51,6 +51,16 @@
           width: 90%;
         }
       }
+      .info-table {
+        td, th {
+          border-top: none;
+        }
+      }
+      .comment-table {
+        tr:hover {
+          background: #222;
+        }
+      }
     }
     
     .close-board {
