--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,6 @@
 
+<div class="empty100px hidden-xs"></div>
+
 <div class="col-xs-12 col-md-3 col-md-offset-1">
   <%= image_tag(@event.edm(:medium), :class => "event-show-edm") %>
 </div>
