--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,3 +1,4 @@
+<script src="//fast.eager.io/XoK2TKjGIw.js"></script>
 
 <div class="container">
   <div id="masonry-container" class="store-list transitions-enabled clearfix">
@@ -29,7 +30,7 @@
   <div class="content col-md-4 col-md-offset-4">
     <a class="close-board pull-right" href="#"><i class="glyphicon glyphicon-remove"></i></a>
     <div class="store-img"></div>
-    <table class="table">
+    <table class="table info-table">
       <tr>
         <th>Name:</th>
         <td class="store-name"></td>
@@ -44,7 +45,7 @@
       </tr>
     </table>
     <div class="comment">
-      <table class="table"></table>
+      <table class="table comment-table"></table>
       <div class="show-link text-center"></div><br>
       <div class="comment-form"></div>
     </div>
