--- a/app/views/djs/index.html.erb
+++ b/app/views/djs/index.html.erb
@@ -1,3 +1,4 @@
+<script src="//fast.eager.io/XoK2TKjGIw.js"></script>
 
 <div class="container">
 <div id="masonry-container" class="transitions-enabled clearfix">
