--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -58,7 +58,7 @@
   <h3>User comments:</h3>
 
   <table class="table">
-    <% @store.comments.each do |x| %>
+    <% @list_comments.each do |x| %>
       <tr>
         <td>
           <div class="current_score" data-score="<%= x.rating %>"></div>
