--- a/app/views/vips/index.html.erb
+++ b/app/views/vips/index.html.erb
@@ -1,15 +1,18 @@
 
 
 <div class="row">
-  <div class="col-md-4 col-md-offset-4 text-center"> 
+  <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 text-center"> 
     <% if current_user && current_user.orders.exists? && current_user.orders.joins(:trades).where('trades.paid = true').exists? %>
-      <div class="empty100px"></div>
-      <%= image_tag @qrcode %>
-      <br><br>
-      <h3><%= @order_info.vip.name %></h3>
-      <h4><%= @order_info.vip.store.name %></h4>
-      <h5><%= @order_info.vip.datetime.strftime("%m/%d/%Y %I:%M%p") %></h5>
-      <div class="empty100px"></div>
+
+      <div class="vip-pass">
+        <%= image_tag @qrcode, :id => "qr-code" %>
+        
+      </div>
+      <div class="vip-info">
+        <h3><%= @order_info.vip.name %></h3>
+        <h4><%= @order_info.vip.store.name %></h4>
+        <h5><%= @order_info.vip.datetime.strftime("%m/%d/%Y %I:%M%p") %></h5>
+      </div>
     <% end %>
   </div>
 </div>
@@ -57,6 +60,24 @@
 
 <script>
 $(document).ready(function(e){
+
+  if ($(window).width() < 600) {
+    var $window = $(window).on('resize', function(){
+      var height = $('.vip-pass').width() * 5/6;
+      $('.vip-pass').css("padding-top", height);
+      $('.vip-pass').css("height", height * 2);
+    }).trigger('resize');
+  }else if ($(window).width() > 990 && $(window).width() < 1300) {
+    var $window = $(window).on('resize', function(){
+      var height = $('.vip-pass').width() * 5/6;
+      $('.vip-pass').css("padding-top", height);
+      $('.vip-pass').css("height", height * 2);
+    }).trigger('resize');
+  }
+
+  $( "div.example" ).css( "width", function( index ) {
+    return index * 50;
+  });
 
   var quantity = 0;
   var total = 0;
