--- a/app/views/djs/show.html.erb
+++ b/app/views/djs/show.html.erb
@@ -1,18 +1,16 @@
 
-<div class="col-md-4 col-md-offset-4 dj-show-left">
+<div class="col-md-4 col-md-offset-4 col-xs-12 dj-show-left">
   <div class="col-xs-12">
     <% if @dj.photo.exists? %>
       <%= image_tag @dj.photo.url, :class => "" %>
-      
     <% else %>
       <%= image_tag("dj_img.jpg", :class => "") %>
     <% end %>
     <h1><%= @dj.name %></h1>
   </div>
-  
 </div>
 
-<div class="col-md-4 col-md-offset-4 dj-show-right">
+<div class="col-md-4 col-md-offset-4 col-xs-12 dj-show-right">
   <h3>播放清單：</h3>
   <% @dj.playlists.each do |x| %>
     <div class="col-xs-12">
@@ -21,7 +19,7 @@
   <% end %>
 </div>
 
-<div class="col-md-4 col-md-offset-4 dj-events">
+<div class="col-md-4 col-md-offset-4 col-xs-12 dj-events">
   <h3>演出活動：</h3>
   <div class="row">
   <% @dj.events.public_event.each do |x| %>
