--- a/app/assets/stylesheets/dj.scss
+++ b/app/assets/stylesheets/dj.scss
@@ -49,6 +49,9 @@
   }
   .dj-show-right {
     margin-top: 30px;
+    p {
+      width: 100% !important;
+    }
     h3 {
       display: inline;
     }
