--- a/app/views/djs/show.html.erb
+++ b/app/views/djs/show.html.erb
@@ -13,7 +13,7 @@
 <div class="col-md-4 col-md-offset-4 col-xs-12 dj-show-right">
   <h3>播放清單：</h3>
   <% @dj.playlists.each do |x| %>
-    <div class="col-xs-12">
+    <div class="col-xs-12 play-list">
       <%= raw(x.content) %>
     </div>
   <% end %>
@@ -29,3 +29,9 @@
   <% end %>
   </div>
 </div>
+
+<script>
+  $(document).ready(function(e){
+    $('.play-list div').css('width', '100%');
+  });
+</script>
