--- a/app/assets/stylesheets/tipsy.scss
+++ b/app/assets/stylesheets/tipsy.scss
@@ -3,7 +3,7 @@
 .tipsy {
 
   .banner {
-  
+
     #banner-bg {
       z-index: -100;
       width: 100%;
@@ -18,6 +18,15 @@
       // filter: blur(2px);
       // transform: scale(1.1);
     }
+    .banner-video {
+      position: absolute;
+      width: 100%;
+      overflow: hidden;
+      video {
+        width: 100%;
+        background: #000;
+      }
+    }
 
     .black-wrap {
       position: absolute;
@@ -31,7 +40,7 @@
       background: none;
       position: relative;
       z-index: 100;
-      
+
       // padding: 0;
       // margin: 0;
 
@@ -69,7 +78,7 @@
 
       }
     }
-    
+
 
 
   }
@@ -77,7 +86,7 @@
 
 // main content
   #content1 {
-    
+
     img {
       width: 100%;
     }
@@ -88,16 +97,16 @@
     .rt1, .rt2, .rm1, .rm2, .rm3, .rb1, .rb2 {
       background-size: auto;
       background-repeat: no-repeat;
-      background-position: center; 
+      background-position: center;
 
     }
 
-    
+
     .col-l1 {
       background: image-url("l1.jpg");
       background-size: cover;
       background-repeat: no-repeat;
-      background-position: center; 
+      background-position: center;
       .event-info{
         text-align: center;
         padding: 10px;
@@ -133,7 +142,7 @@
       background: image-url("rb1.jpg");
       background-size: cover;
       background-repeat: no-repeat;
-      background-position: center; 
+      background-position: center;
 
       .black-wrap{
         position: absolute;
@@ -145,7 +154,7 @@
       .container {
         position: absolute;
         width: 100%;
-        z-index: 100; 
+        z-index: 100;
       }
       h2 {
         position: relative;
@@ -158,7 +167,7 @@
         position: relative;
         display: block;
         text-align: center;
-        font-size: 1.4em; 
+        font-size: 1.4em;
       }
     }
     .rb2 {
@@ -172,7 +181,7 @@
     .jumbotron {
       background: image-url("dj-block.jpg") #000 ;
       background-repeat: no-repeat;
-      background-position: left center; 
+      background-position: left center;
       background-size: auto;
       margin-bottom: 0;
       height: 600px;
@@ -188,7 +197,7 @@
       width: 100%;
       z-index: 100;
       p {
-        font-size: 1.6em; 
+        font-size: 1.6em;
       }
     }
     .dj-btn {
@@ -218,7 +227,7 @@
     .jumbotron {
       background: image-url("club-queue.jpg");
       background-repeat: no-repeat;
-      background-position: 30% center; 
+      background-position: 30% center;
       background-size: cover;
       margin-bottom: 0;
       height: 600px;
@@ -233,7 +242,7 @@
       width: 100%;
       z-index: 100;
       p {
-        font-size: 1.6em; 
+        font-size: 1.6em;
       }
     }
     .vip-btn {
@@ -263,15 +272,15 @@
     background: rgba(0,0,0,0.8);
     display: none;
     .container {
-    padding-top: 5%; 
+    padding-top: 5%;
       .content {
       // overflow: hidden;
       // display: inline;
         img {
           width: 250px;
-          transition: transform .3s ease-out; 
+          transition: transform .3s ease-out;
         }
-        img:hover { 
+        img:hover {
           transform: scale(1.2);
         }
       }
@@ -285,19 +294,19 @@
     }
   }
 
-  
+
 
 }
 
 @media screen and (max-width: 750px) {
-  
+
   .tipsy {
 
     #dj-block {
       .jumbotron {
         padding-top: 200px;
         background-repeat: no-repeat;
-        background-position: top center; 
+        background-position: top center;
       }
       .container {
         padding-left: 0;
@@ -333,7 +342,7 @@
         }
       }
     }
-    
+
   }
 }
 
@@ -372,9 +381,3 @@
     }
   }
 }
-
-
-
-
-
-
