Chang video bg.

--- a/app/assets/stylesheets/tipsy.scss
+++ b/app/assets/stylesheets/tipsy.scss
@@ -24,7 +24,7 @@
       overflow: hidden;
       video {
         width: 100%;
-        background: #000;
+        background: image-url("banner.jpg");
       }
     }
 
