--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,5 +1,4 @@
-
-
+<!--
 <div class="store-image">
   <div class="col-md-6 col-md-offset-3">
     <% if @store.photo %>
@@ -10,112 +9,60 @@
       <%= image_tag(@store.yelp_image) %>
     <% end %>
   </div>
+</div> -->
+
+<style>
+#store-banner > div > img {
+  width: 100%;
+}
+@media screen and (max-width: 750px) {
+  #store-banner > div > img {
+    width: 150%;
+    position: relative;
+    left: -25%;
+  }
+}
+</style>
+
+<div id="store-banner">
+  <div style="width:100%;height:auto;overflow:hidden;" class="text-center">
+    <img src="http://dummyimage.com/1920x500/cccccc/ffffff.png&text=Banner" alt="">
+  </div>
 </div>
-
-<div class="col-md-6 col-md-offset-3">
-
-  <table class="table">
-  <tr>
-    <td>
-      <p><%= @store.name %></p>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <a href="tel:<%= @store.phone %>"><%= @store.phone %></a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <p><%= @store.location_city %></p>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <a href="maps:ll=<%= @store.coordinate_lat %>,<%= @store.coordinate_lon %>&z=15">
-        <address><%= @store.location_address %></address>
-      </a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <p><%= @store.coordinate_lat %></p>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <p><%= @store.coordinate_lon %></p>
-    </td>
-  </tr>
-</table>
-</div>
-
-
-
-
-<div class="col-md-6 col-md-offset-3">
-
-  <h3>User comments:</h3>
-
-  <table class="table">
-    <% @list_comments.each do |x| %>
-      <tr>
-        <td>
-          <div class="current_score" data-score="<%= x.rating %>"></div>
-        </td>
-        <td><%= x.content %> <br> <small> by <%= x.user.name %> - <%= time_ago_in_words(x.created_at) %> ago</small></td>
-        <td>
-        <% if current_user %>
-          <% if x.user == current_user %>  
-            <div class="pull-right">
-              <%= link_to comment_path(x), :method => "delete", :data => { :confirm => "Are you sure?" }, :class => "btn btn-xs" do %>
-                <i class="glyphicon glyphicon-remove"></i>
-              <% end %>
-            </div>
-          <% end %>
-        <% end %>
-        </td> 
-      </tr>
-    <% end %>
-  </table>
-
-
-  <%= form_for @comment, :url => comments_path do |n|  %>
-    <%= n.hidden_field :store_id, :value => @store.id %>
-    <div id="rating" class="form-group">
-      <%= n.label :rating, "Rating" %>
-      <%= n.hidden_field :rating, :class => "form-control", :name => "score" %>
-      <div class="star"></div>  
+<div id="store-event" style="margin-top:30px;">
+  <div class="container event-container">
+    <div id="wrap" class="">
+      <img src="http://dummyimage.com/360x640/cccccc/ffffff.png&text=Event" alt="">
+      <img src="http://dummyimage.com/360x640/cccccc/ffffff.png&text=Event" alt="">
+      <img src="http://dummyimage.com/360x640/cccccc/ffffff.png&text=Event" alt="">
+      <img src="http://dummyimage.com/360x640/cccccc/ffffff.png&text=Event" alt="">
+      <img src="http://dummyimage.com/360x640/cccccc/ffffff.png&text=Event" alt="">
     </div>
-    <div class="form-group">
-      <%= n.label :content, "Content" %>
-      <%= n.text_area :content, :class => "form-control", :required => "required", :rows => 5 %>    
-    </div>
-    <%= n.submit "Create", :class => "btn btn-primary" %>
-  <% end %>
-
-
+  </div>
+</div>
+<div id="plan-view" class="text-center" style="margin-top:30px;">
+  <img src="http://dummyimage.com/800x500/cccccc/ffffff.png&text=PlanView" alt="" style="max-width:100%;">
+</div>
+<div id="gogole-map" style="margin-top:30px;">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14459.878237166502!2d121.566021!3d25.0351071!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x60f9b663d6a4deb1!2sATT+4+FUN!5e0!3m2!1szh-TW!2stw!4v1472441257269" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 
-
-
-<div class="empty100px"></div>
 
 <script>
-  
-$(document).ready(function(e){
-
-  $('.star').raty({ 
-    score: '3'
-  });
-
-  $('.current_score').raty({ 
-    readOnly: true,
-    score: function() {
-      return $(this).attr('data-score');
-    }
-  }); 
-
-});
-
+  $(document).ready(function(e){
+    $("#wrap").addClass("owl-carousel");
+    $(".owl-carousel").owlCarousel({
+      items: 3,
+      navigation : false,
+      slideSpeed: 300,
+      paginationSpeed : 400,
+      singleItem: function(issingle) {
+          if ($(window).width() < 750) {
+            return true;
+          } else {
+            return false;
+          }
+        }
+    });
+  })
 </script>
